--- a/FDA Drug Shortage Data.ipynb
+++ b/FDA Drug Shortage Data.ipynb
@@ -182,7 +182,9 @@
     "# Load dataset into dataframe and verify the content\n",
     "\n",
     "# Load the dataset directly from the web link into dataframe df0, skipping the first line and selecting only the columns needed\n",
-    "df0 = pd.read_csv(\"https://www.accessdata.fda.gov/scripts/drugshortages/Drugshortages.cfm\", skiprows=1, usecols=['Generic Name', 'Company Name', ' Presentation', ' Type of Update', 'Date of Update', ' Availability Information', ' Related Information', ' Reason for Shortage'])\n",
+    "df0 = pd.read_csv(\"https://www.accessdata.fda.gov/scripts/drugshortages/Drugshortages.cfm\", \n",
+    "                  skiprows=1,\n",
+    "                  usecols=['Generic Name', 'Company Name', ' Presentation', ' Type of Update', 'Date of Update', ' Availability Information', ' Related Information', ' Reason for Shortage'])\n",
     "\n",
     "# Display the first 5 rows of the dataframe\n",
     "df0.head()"
