--- a/FDA Drug Shortage Data.ipynb
+++ b/FDA Drug Shortage Data.ipynb
@@ -200,16 +200,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1906 entries, 0 to 1905\n",
+      "RangeIndex: 1907 entries, 0 to 1906\n",
       "Data columns (total 8 columns):\n",
       " #   Column                     Non-Null Count  Dtype \n",
       "---  ------                     --------------  ----- \n",
-      " 0   Generic Name               1906 non-null   object\n",
-      " 1   Company Name               1906 non-null   object\n",
-      " 2    Presentation              1906 non-null   object\n",
-      " 3    Type of Update            1906 non-null   object\n",
-      " 4   Date of Update             1906 non-null   object\n",
-      " 5    Availability Information  1482 non-null   object\n",
+      " 0   Generic Name               1907 non-null   object\n",
+      " 1   Company Name               1907 non-null   object\n",
+      " 2    Presentation              1907 non-null   object\n",
+      " 3    Type of Update            1907 non-null   object\n",
+      " 4   Date of Update             1907 non-null   object\n",
+      " 5    Availability Information  1483 non-null   object\n",
       " 6    Related Information       922 non-null    object\n",
       " 7    Reason for Shortage       600 non-null    object\n",
       "dtypes: object(8)\n",
@@ -242,16 +242,16 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1906 entries, 0 to 1905\n",
+      "RangeIndex: 1907 entries, 0 to 1906\n",
       "Data columns (total 8 columns):\n",
       " #   Column                    Non-Null Count  Dtype \n",
       "---  ------                    --------------  ----- \n",
-      " 0   Generic Name              1906 non-null   object\n",
-      " 1   Company Name              1906 non-null   object\n",
-      " 2   Presentation              1906 non-null   object\n",
-      " 3   Type of Update            1906 non-null   object\n",
-      " 4   Date of Update            1906 non-null   object\n",
-      " 5   Availability Information  1482 non-null   object\n",
+      " 0   Generic Name              1907 non-null   object\n",
+      " 1   Company Name              1907 non-null   object\n",
+      " 2   Presentation              1907 non-null   object\n",
+      " 3   Type of Update            1907 non-null   object\n",
+      " 4   Date of Update            1907 non-null   object\n",
+      " 5   Availability Information  1483 non-null   object\n",
       " 6   Related Information       922 non-null    object\n",
       " 7   Reason for Shortage       600 non-null    object\n",
       "dtypes: object(8)\n",
@@ -346,7 +346,7 @@
        "      <td>Demand increase for the drug</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1108</th>\n",
+       "      <th>1109</th>\n",
        "      <td>Liraglutide Injection</td>\n",
        "      <td>Novo Nordisk, Inc.</td>\n",
        "      <td>Saxenda, Injection, 6 mg/1 mL (NDC 0169-2800-15)</td>\n",
@@ -366,28 +366,28 @@
        "700   Dulaglutide Injection   Eli Lilly and Co.   \n",
        "701   Dulaglutide Injection   Eli Lilly and Co.   \n",
        "702   Dulaglutide Injection   Eli Lilly and Co.   \n",
-       "1108  Liraglutide Injection  Novo Nordisk, Inc.   \n",
+       "1109  Liraglutide Injection  Novo Nordisk, Inc.   \n",
        "\n",
        "                                           Presentation Type of Update  \\\n",
        "699   Trulicity, Injection, .75 mg/.5 mL (NDC 0002-1...        Revised   \n",
        "700   Trulicity, Injection, 1.5 mg/.5 mL (NDC 0002-1...        Revised   \n",
        "701   Trulicity, Injection, 3 mg/.5 mL (NDC 0002-223...        Revised   \n",
        "702   Trulicity, Injection, 4.5 mg/.5 mL (NDC 0002-3...        Revised   \n",
-       "1108   Saxenda, Injection, 6 mg/1 mL (NDC 0169-2800-15)     Reverified   \n",
+       "1109   Saxenda, Injection, 6 mg/1 mL (NDC 0169-2800-15)     Reverified   \n",
        "\n",
        "     Date of Update Availability Information  \\\n",
        "699      06/04/2024                Available   \n",
        "700      06/04/2024                Available   \n",
        "701      06/04/2024     Limited Availability   \n",
        "702      06/04/2024     Limited Availability   \n",
-       "1108     06/12/2024     Limited Availability   \n",
+       "1109     06/12/2024     Limited Availability   \n",
        "\n",
        "                        Related Information           Reason for Shortage  \n",
        "699                                     NaN                           NaN  \n",
        "700                                     NaN                           NaN  \n",
        "701   Limited availability through Q2 2024.  Demand increase for the drug  \n",
        "702   Limited availability through Q2 2024.  Demand increase for the drug  \n",
-       "1108        Estimated shortage duration TBD  Demand increase for the drug  "
+       "1109        Estimated shortage duration TBD  Demand increase for the drug  "
       ]
      },
      "execution_count": 6,
@@ -411,7 +411,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 27 entries, 699 to 1883\n",
+      "Index: 27 entries, 699 to 1884\n",
       "Data columns (total 8 columns):\n",
       " #   Column                    Non-Null Count  Dtype \n",
       "---  ------                    --------------  ----- \n",
@@ -530,7 +530,7 @@
        "      <td>4.5 mg/.5 mL (NDC 0002-3182-80)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1108</th>\n",
+       "      <th>1109</th>\n",
        "      <td>Liraglutide</td>\n",
        "      <td>Novo Nordisk</td>\n",
        "      <td>Saxenda, Injection, 6 mg/1 mL (NDC 0169-2800-15)</td>\n",
@@ -553,35 +553,35 @@
        "700   Dulaglutide     Eli Lilly   \n",
        "701   Dulaglutide     Eli Lilly   \n",
        "702   Dulaglutide     Eli Lilly   \n",
-       "1108  Liraglutide  Novo Nordisk   \n",
+       "1109  Liraglutide  Novo Nordisk   \n",
        "\n",
        "                                           Presentation Type of Update  \\\n",
        "699   Trulicity, Injection, .75 mg/.5 mL (NDC 0002-1...        Revised   \n",
        "700   Trulicity, Injection, 1.5 mg/.5 mL (NDC 0002-1...        Revised   \n",
        "701   Trulicity, Injection, 3 mg/.5 mL (NDC 0002-223...        Revised   \n",
        "702   Trulicity, Injection, 4.5 mg/.5 mL (NDC 0002-3...        Revised   \n",
-       "1108   Saxenda, Injection, 6 mg/1 mL (NDC 0169-2800-15)     Reverified   \n",
+       "1109   Saxenda, Injection, 6 mg/1 mL (NDC 0169-2800-15)     Reverified   \n",
        "\n",
        "     Date of Update Availability Information  \\\n",
        "699      06/04/2024                Available   \n",
        "700      06/04/2024                Available   \n",
        "701      06/04/2024     Limited Availability   \n",
        "702      06/04/2024     Limited Availability   \n",
-       "1108     06/12/2024     Limited Availability   \n",
+       "1109     06/12/2024     Limited Availability   \n",
        "\n",
        "                        Related Information           Reason for Shortage  \\\n",
        "699                                     NaN                           NaN   \n",
        "700                                     NaN                           NaN   \n",
        "701   Limited availability through Q2 2024.  Demand increase for the drug   \n",
        "702   Limited availability through Q2 2024.  Demand increase for the drug   \n",
-       "1108        Estimated shortage duration TBD  Demand increase for the drug   \n",
+       "1109        Estimated shortage duration TBD  Demand increase for the drug   \n",
        "\n",
        "     Brand Name Administration                           Dosage  \n",
        "699   Trulicity      Injection  .75 mg/.5 mL (NDC 0002-1433-80)  \n",
        "700   Trulicity      Injection  1.5 mg/.5 mL (NDC 0002-1434-80)  \n",
        "701   Trulicity      Injection    3 mg/.5 mL (NDC 0002-2236-80)  \n",
        "702   Trulicity      Injection  4.5 mg/.5 mL (NDC 0002-3182-80)  \n",
-       "1108    Saxenda      Injection     6 mg/1 mL (NDC 0169-2800-15)  "
+       "1109    Saxenda      Injection     6 mg/1 mL (NDC 0169-2800-15)  "
       ]
      },
      "execution_count": 8,
@@ -702,7 +702,7 @@
        "      <td>4.5 mg/.5 mL (NDC 0002-3182-80)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1108</th>\n",
+       "      <th>1109</th>\n",
        "      <td>Liraglutide</td>\n",
        "      <td>Novo Nordisk</td>\n",
        "      <td>Reverified</td>\n",
@@ -724,28 +724,28 @@
        "700   Dulaglutide     Eli Lilly        Revised     06/04/2024   \n",
        "701   Dulaglutide     Eli Lilly        Revised     06/04/2024   \n",
        "702   Dulaglutide     Eli Lilly        Revised     06/04/2024   \n",
-       "1108  Liraglutide  Novo Nordisk     Reverified     06/12/2024   \n",
+       "1109  Liraglutide  Novo Nordisk     Reverified     06/12/2024   \n",
        "\n",
        "     Availability Information                    Related Information  \\\n",
        "699                 Available                                    NaN   \n",
        "700                 Available                                    NaN   \n",
        "701      Limited Availability  Limited availability through Q2 2024.   \n",
        "702      Limited Availability  Limited availability through Q2 2024.   \n",
-       "1108     Limited Availability        Estimated shortage duration TBD   \n",
+       "1109     Limited Availability        Estimated shortage duration TBD   \n",
        "\n",
        "               Reason for Shortage Brand Name Administration  \\\n",
        "699                            NaN  Trulicity      Injection   \n",
        "700                            NaN  Trulicity      Injection   \n",
        "701   Demand increase for the drug  Trulicity      Injection   \n",
        "702   Demand increase for the drug  Trulicity      Injection   \n",
-       "1108  Demand increase for the drug    Saxenda      Injection   \n",
+       "1109  Demand increase for the drug    Saxenda      Injection   \n",
        "\n",
        "                               Dosage  \n",
        "699   .75 mg/.5 mL (NDC 0002-1433-80)  \n",
        "700   1.5 mg/.5 mL (NDC 0002-1434-80)  \n",
        "701     3 mg/.5 mL (NDC 0002-2236-80)  \n",
        "702   4.5 mg/.5 mL (NDC 0002-3182-80)  \n",
-       "1108     6 mg/1 mL (NDC 0169-2800-15)  "
+       "1109     6 mg/1 mL (NDC 0169-2800-15)  "
       ]
      },
      "execution_count": 9,
@@ -934,7 +934,7 @@
     "# Convert the Dose column to numeric and replace any errors with NaN to make it easier to work with \n",
     "df0['Dose'] = pd.to_numeric(df0['Dose'], errors='coerce')\n",
     "\n",
-    "# Sort on Brand Name, Date of Update, and Dosage\n",
+    "# Sort on Brand Name, Date of Update, and Dose\n",
     "df0.sort_values(by=['Brand Name', 'Date of Update', 'Dose'], inplace=True)\n",
     "\n",
     "# Reindex the dataframe to reflect the new order\n",
