--- a/FDA Drug Shortage Data.ipynb
+++ b/FDA Drug Shortage Data.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "4  To Be Discontinued  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -231,8 +231,8 @@
       " 3    Type of Update            1898 non-null   object\n",
       " 4   Date of Update             1898 non-null   object\n",
       " 5    Availability Information  1424 non-null   object\n",
-      " 6    Related Information       841 non-null    object\n",
-      " 7    Reason for Shortage       539 non-null    object\n",
+      " 6    Related Information       854 non-null    object\n",
+      " 7    Reason for Shortage       542 non-null    object\n",
       " 8    Status                    1898 non-null   object\n",
       "dtypes: object(9)\n",
       "memory usage: 133.6+ KB\n"
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,8 +279,8 @@
       " 3   Type of Update            1898 non-null   object\n",
       " 4   Date of Update            1898 non-null   object\n",
       " 5   Availability Information  1424 non-null   object\n",
-      " 6   Related Information       841 non-null    object\n",
-      " 7   Reason for Shortage       539 non-null    object\n",
+      " 6   Related Information       854 non-null    object\n",
+      " 7   Reason for Shortage       542 non-null    object\n",
       " 8   Status                    1898 non-null   object\n",
       "dtypes: object(9)\n",
       "memory usage: 133.6+ KB\n"
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "1109  Delay in shipping of the drug  Current  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
        "1109     6 mg/1 mL (NDC 0169-4060-12)  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +811,7 @@
        "1109     6 mg/1 mL (NDC 0169-4060-12)  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
        "      <td>Revised</td>\n",
        "      <td>10/02/2024</td>\n",
        "      <td>Resolved</td>\n",
-       "      <td>Available</td>\n",
+       "      <td>Availability may vary</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -917,7 +917,7 @@
        "      <td>Revised</td>\n",
        "      <td>10/02/2024</td>\n",
        "      <td>Resolved</td>\n",
-       "      <td>Available</td>\n",
+       "      <td>Availability may vary</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -931,7 +931,7 @@
        "      <td>Revised</td>\n",
        "      <td>10/02/2024</td>\n",
        "      <td>Resolved</td>\n",
-       "      <td>Available</td>\n",
+       "      <td>Availability may vary</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -953,15 +953,15 @@
        "3    5 mg/.5 mL (NDC 0002-1495-80)   5.0        Revised     10/02/2024   \n",
        "4  7.5 mg/.5 mL (NDC 0002-1484-80)   7.5        Revised     10/02/2024   \n",
        "\n",
-       "  Availability Information  Related Information Reason for Shortage  \n",
-       "0                Available  Distributed by Teva                 NaN  \n",
-       "1                Available  Distributed by Teva                 NaN  \n",
-       "2                 Resolved            Available                 NaN  \n",
-       "3                 Resolved            Available                 NaN  \n",
-       "4                 Resolved            Available                 NaN  "
+       "  Availability Information    Related Information Reason for Shortage  \n",
+       "0                Available    Distributed by Teva                 NaN  \n",
+       "1                Available    Distributed by Teva                 NaN  \n",
+       "2                 Resolved  Availability may vary                 NaN  \n",
+       "3                 Resolved  Availability may vary                 NaN  \n",
+       "4                 Resolved  Availability may vary                 NaN  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +984,7 @@
     "# If Availability Information is Available or Resolved and Related Information is blank, replace Related Information with Rationing may apply\n",
     "df0.loc[(df0['Availability Information'] == 'Available') & (df0['Related Information'].isnull()), 'Related Information'] = 'Rationing may apply'\n",
     "\n",
-    "df0.loc[(df0['Availability Information'] == 'Resolved') & (df0['Related Information'].isnull()), 'Related Information'] = 'Available'\n",
+    "df0.loc[(df0['Availability Information'] == 'Resolved') & (df0['Related Information'].isnull()), 'Related Information'] = 'Availability may vary'\n",
     "\n",
     "# Replace entries ending with TBD with Shortage duration TBD\n",
     "df0['Availability Information'] = df0['Availability Information'].replace('Limited availability.  Estimated shortage duration TBD', 'Shortage duration TBD')\n",
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
