--- a/FDA Drug Shortage Data v3.ipynb
+++ b/FDA Drug Shortage Data v3.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,10 +46,7 @@
     "import json\n",
     "\n",
     "# For making HTTP requests and handling responses\n",
-    "import requests as req\n",
-    "\n",
-    "# For creating in-memory text streams\n",
-    "from io import StringIO as sio"
+    "import requests as req"
    ]
   },
   {
